<resources>
    <string name="app_name">FinalCapstone_NomApp</string>
    <string name="FullName">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="alreadymemmber">Already Member? Login</string>
    <string name="login">Login</string>
    <string name="newhere">New Here? Register</string>
    <string name="signup">Sign Up</string>
    ////////////////////////////////////////////////////////////
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes </string>
    <string name="favorite_fragment">Favorites </string>
    <string name="nointernet">No Internet Connection</string>
    <string name="title">Title</string>
    <string name="vegetarian">vegetarian</string>
    <string name="vegan">vegan</string>
    <string name="Vegetarian">Vegetarian</string>
    <string name="Vegan">Vegan</string>
    <string name="Dairyfree">Dairy Free</string>
    <string name="glutenfree">Gluten Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="no_doit_later">You Do Not Have Any Recipe To Cook</string>
    <string name="cook">Cook Later</string>
    <string name="cookingLater">Cook it Later</string>
    <string name="iwillcookit">I\'ll cook it</string>
    <string name="addyournote">Add your note ..</string>
    <string name="oneplace">one place for most delicious recipes</string>
    <string name="getStarted">Get Started</string>
</resources>